# bb_challenge

./: .gitignore  Cargo.toml  config.toml  debug_info.txt  readme.md
benches/: benchmarks-criterion.rs
examples/: run_bb_challenge_file.rs  run_cycler.rs
examples/examples_html/decider_bouncer_128_bb4/: decided_non_halt_decider_bouncer_128_BB4_0RB---_1LC1RB_0LD0LC_0RA0RA.html  decided_non_halt_decider_bouncer_128_BB4_1RB0LB_1LA0LC_---1RD_0RA0RA.html
examples/examples_html/decider_bouncer_128_bb4/styles/: dark.css
examples/examples_html/decider_bouncer_128_bb5/: decided_non_halt_decider_bouncer_128_BB5_1RB---_1LC0RD_0LC0LE_0RB0RA_0RA0RA.html
examples/examples_html/decider_bouncer_128_bb5/styles/: light.css
result/hold/: Decider Hold_BB4_ID_191658921_1RB1LB_1LA0LC_---1LD_1RD0RA.html
result/hold/styles/: dark.css  light.css
src/: arg_handler.rs  bb_file_reader.rs  config.rs  data_provider.rs  data_provider_threaded.rs  decider.rs  decider_bouncer.rs  decider_bouncer_128.rs  decider_bouncer_128_speed_up.rs  decider_bouncer_apex.rs  decider_bouncer_v1.rs  decider_bouncer_v2.rs  decider_cycler.rs  decider_cycler_v4.rs  decider_cycler_v5.rs  decider_data_128.rs  decider_data_apex.rs  decider_data_long.rs  decider_data_long_128.rs  decider_deprecated.rs  decider_engine.rs  decider_expanding_loop.rs  decider_hold_long_v3.rs  decider_hold_u128_long.rs  decider_hold_u128_long_v2.rs  decider_hold_u128_long_v3.rs  decider_loop_v4.rs  decider_result.rs  decider_result_worker.rs  decider_u128.rs  decider_u128_long.rs  decider_u64.rs  error.rs  examples.rs  file.rs  generator.rs  generator_full.rs  generator_reduced.rs  html.rs  lib.rs  (+29 more)
src/data_provider/: bb_file_reader.rs  bb_file_shrink.rs  enumerator.rs  enumerator_binary.rs  enumerator_tnf.rs  generator.rs  generator_full.rs  generator_reduced.rs  generator_reduced_forward.rs  generator_reduced_reversed.rs
src/decider/: decider_bouncer_128.rs  decider_bouncer_128_speed_up.rs  decider_bouncer_apex.rs  decider_bouncer_v1.rs  decider_cycler.rs  decider_cycler_small.rs  decider_data.rs  decider_data_128.rs  decider_data_apex.rs  decider_data_compact.rs  decider_data_long.rs  decider_data_macro.rs  decider_engine.rs  decider_halt_long.rs  decider_halt_macro.rs  decider_hold_compact.rs  decider_hold_long.rs  decider_hold_long_apex.rs  decider_hold_long_v3.rs  decider_hold_macro.rs  decider_hold_u128_v3.rs  decider_result.rs  decider_result_worker.rs  pre_decider.rs  step_record.rs
src/tape/: tape_128.rs  tape_compact.rs  tape_long_fixed.rs  tape_long_fixed_apex.rs  tape_long_shifted.rs  tape_macro.rs  tape_utils.rs
src/unused/: decider_halt_128.rs  decider_halt_64.rs  tape_long_fixed.rs
