[package]
name = "bb_challenge"
version = "0.1.0"
edition = "2021"
# default-run = "../busy_beaver"

[dependencies]
chrono = "0.4"
hashbrown = "0.15"
num_cpus = "1.16"
num-format = "0.4"
# toml = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
# criterion2 = "1.1.1"

[features]
# default = ["bb_counter_stats"]
# default = ["bb_debug"]
# default = ["bb_debug", "bb_debug_cycler", "bb_no_self_ref"]
# default = ["bb_debug_cycler", "bb_no_self_ref"]
# default = ["bb_no_self_ref"]
# default = ["bb_generator_longest_skip_chain"]
# default = ["bb_use_result_large"]
# default = ["bb_print_non_pre_perm"]
# default = ["bb_enable_html_reports", "bb_debug_cycler"]
# default = [
#     "bb_enable_html_reports",
#     "bb_no_self_ref",
#     "bb_debug_tape",
#     "bb_debug",
# ]
# default = ["bb_enable_html_reports", "bb_no_self_ref"]
# default = ["bb_enable_html_reports", "bb_debug_tape"]
# default = ["bb_enable_html_reports", "bb_debug"]
default = ["bb_enable_html_reports"]
bb_debug = []
bb_debug_cycler = []
# detailed information on tape changes
bb_debug_tape = []
# additional stats for the result
bb_counter_stats = []
# immediate write to file instead of buffering, needed for debugging
# bb_html_flush = []
# Allow optional output to html files but will have a 10%-30% performance hit even if write_html_file = false.
bb_enable_html_reports = []
bb_generator_longest_skip_chain = []
bb_print_non_pre_perm = []
bb_no_self_ref = []
# bb_use_result_large = []

[[bench]]
name = "bench_bb_challenge"
path = "benches/benchmarks-criterion.rs"
harness = false
