[package]
name = "bb_challenge"
version = "0.1.0"
edition = "2021"
# default-run = "../busy_beaver"

[dependencies]
chrono = "0.4"
hashbrown = "0.15"
num_cpus = "1.16"
num-format = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
# criterion2 = "1.1.1"

[features]
# default = ["enable_html_reports"]
# default = ["enable_html_reports", "debug_tape", "bb_debug"]
# default = ["counter_stats"]
# default = ["without_self_ref_acceleration"]

# default = ["bb_debug"]
# default = ["bb_debug", "bb_debug_cycler", "bb_no_self_ref"]
# default = ["bb_debug_cycler", "bb_no_self_ref"]
# default = ["bb_enumerator_longest_skip_chain"]
# default = ["bb_use_result_large"]
# default = ["bb_print_non_pre_perm"]
# default = ["enable_html_reports", "bb_debug_cycler"]
# default = [
#     "enable_html_reports",
#     "bb_no_self_ref",
#     "bb_debug_tape",
#     "bb_debug",
# ]
# default = ["enable_html_reports", "bb_no_self_ref"]
# default = ["enable_html_reports", "bb_debug"]

bb_debug = []
bb_debug_cycler = []
# immediate write to file instead of buffering, needed for debugging
bb_enumerator_longest_skip_chain = []
bb_print_non_pre_perm = []
# bb_use_result_large = []

# Print detailed information on tape changes into console.
debug_tape = []
# additional stats for the result
counter_stats = []
# Allow optional output to html files but will have a 10%-30% performance hit even if write_html_file = false.
enable_html_reports = []
# The normalized id, see documentation.
normalized_id_reversed = []
# Some deciders have a speed up when the transition is self-referencing, this turns the speed-up off.
without_self_ref_acceleration = []

[[bench]]
name = "bench_bb_challenge"
path = "benches/benchmarks-criterion.rs"
harness = false
